Fixed overflow disappearing.

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -40,6 +40,7 @@ ahem-app-root {
 
 app-account-view-page {
   flex:1;
+  overflow: auto;
 }
 
 .ahem-toolbar {
